# 29.4_capstonetwo_finalproject_report

./: Makefile  README.md  README_SPRINGBOARD.md  environment.yml  pyproject.toml
29.4_capstonetwo_finalproject_report/: __init__.py  dataset.py  features.py  plots.py
29.4_capstonetwo_finalproject_report/modeling/: predict.py  train.py
data/interim/: zip_to_gzip.py
data/raw/: DataDictionaryBuildingPermit.xlsx  sf_target02.csv
docs/: 18.4_CapstoneTwo_ProjectProposal.odt  mkdocs.yml  ~$.4_CapstoneTwo_ProjectProposal.odt
docs/docs/: index.md
notebooks/: 18.6_capstonetwo_datawrangling.ipynb  22.5_capstonetwo_eda.ipynb  27.2_capstonetwo_preprocessing.ipynb  28.3_capstonetwo_modeling.ipynb
reports/: 29.4_capstonetwo_finalreport.odt  29.4_capstonetwo_finalreport_2025071801.odt  29.4_capstonetwo_finalreport_2025071802.odt
reports/_archives/: 29.4_capstonetwo_finalreport_2025071802.odt  29.4_capstonetwo_finalreport_2025071803.odt  29.4_capstonetwo_finalreport_2025071804.odt  29.4_capstonetwo_presentation_BenoitLoze.pptx  29.4_capstonetwo_presentation_BenoitLoze_2025071802.pptx
reports/model_metrics_files/: model_metrics_file_multinomial_logistic_regression_bayesian_optimization.txt  model_metrics_file_multinomial_logistic_regression_randomized_search.txt  model_metrics_file_random_forest_bayesian_optimization.txt  model_metrics_file_random_forest_randomized_search.txt
