[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "29.4_capstonetwo_finalproject_report"
version = "0.0.1"
description = "Springboard Capstone Two Final Project Report"
authors = [
  { name = "Benoit Loze" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["29.4_capstonetwo_finalproject_report"]
include = ["pyproject.toml", "29.4_capstonetwo_finalproject_report/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["29.4_capstonetwo_finalproject_report"]
force-sort-within-sections = true

